--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,32 +2,41 @@ spring:
   application:
     name: sentinel-ticketing
 
-  # 1. ENABLING VIRTUAL THREADS (The "Java 21" way)
   threads:
     virtual:
       enabled: true
 
-  # 2. DATABASE CONFIG
   datasource:
-    url: jdbc:postgresql://localhost:5432/sentinel_db
+    url: jdbc:postgresql://localhost:5432/sentinel_db?jdbcCompliantTruncation=false&options=-c%20timezone=UTC
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
+    # Increase pool size for high concurrency
+    hikari:
+      maximum-pool-size: 20
+      connection-timeout: 2000
 
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false # Set to false to see our own logs better
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
 
-  # 3. REDIS CONFIG
   data:
     redis:
       host: localhost
       port: 6379
 
-  # 4. KAFKA CONFIG
   kafka:
     bootstrap-servers: localhost:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      # Don't let Kafka block the app for more than 2 seconds
+      properties:
+        max.block.ms: 2000
+        delivery.timeout.ms: 3000
+        request.timeout.ms: 2000
