--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.1</version> <!-- Downgraded to Stable LTS Version -->
+		<version>3.4.1</version>
 		<relativePath/>
 	</parent>
 
@@ -18,7 +18,6 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<!-- Security fix for the vulnerability you identified -->
 		<lz4-java.version>1.8.0</lz4-java.version>
 	</properties>
 
@@ -33,7 +32,7 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<!-- Standard Spring Boot Starters -->
+		<!-- Core Web & Data Starters -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -51,20 +50,28 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!-- Distributed Locking -->
+		<!-- Distributed Systems Infrastructure -->
 		<dependency>
 			<groupId>org.redisson</groupId>
 			<artifactId>redisson-spring-boot-starter</artifactId>
 			<version>3.24.3</version>
 		</dependency>
-
-		<!-- Messaging -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
-		<!-- Database & Tools -->
+		<!-- Observability & Monitoring -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
+		<!-- Persistence & Utility -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -76,7 +83,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Testing -->
+		<!-- Testing Suite -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -105,5 +112,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
