--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+  # Primary Persistence Layer
   postgres:
     image: postgres:16
     container_name: sentinel-db
@@ -9,20 +10,23 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: sentinel_db
 
+  # Distributed Lock & Cache Layer
   redis:
     image: redis:7
     container_name: sentinel-cache
     ports:
       - "6379:6379"
 
-  # Kafka for later phases
+  # Messaging Infrastructure
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
+    container_name: sentinel-zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
     image: confluentinc/cp-kafka:7.4.0
+    container_name: sentinel-kafka
     depends_on:
       - zookeeper
     ports:
@@ -32,3 +36,25 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  # Metrics Collection & Storage
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: sentinel-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./infrastructure/prometheus.yml:/etc/prometheus/prometheus.yml
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  # Metrics Visualization
+  grafana:
+    image: grafana/grafana:latest
+    container_name: sentinel-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
